feat(HO-T-16, auth): Implement user authentication.
Add http endpoints for authentication users:
- api/auth/v1/login - Logging user
- api/auth/v1/logout - Logout user
Now these endpoints works only for generated user (like admin etc...).

For admin panel endpoints like create/update hadith add the cookieAuth check (change specification is openapi yaml files).
